<resources>
    <string name="app_name">Mojec Smart Home</string>
    <string name="title_automation">Automation</string>
    <string name="title_energy">Energy</string>
    <string name="title_security">Security</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_username">Please Enter Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_1">Login</string>
    <string name="login_button_2">Skip To Home</string>

    <string-array name="attendance_dates">
        <item>This Month</item>
        <item>Last Month</item>
        <item>Last 2 Months</item>
        <item>Last 3 Months</item>
        <item>Last 4 Months</item>
        <item>Last 5 Months</item>
        <item>Last 6 Months</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_settings">Settings</string>
    <string name="title_activity_led_control">ledControl</string>
    <string name="title_activity_login">Sign in</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Usage History</string>
    <string name="nav_movies">Credit Recharge</string>
    <string name="nav_information">Meter Information</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Appliance Automation</item>
        <item>Energy Consumption</item>
        <item>Security Cameras</item>
        <item>User Profile</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="pair_device">Pair Automation Hub</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Meter Number</string>
    <string name="prompt_password">Enter PIN Code</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">The meter number does not match</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The PIN code is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="slide_1_title">Automate your home!</string>
    <string name="slide_1_desc">Via Mojec\'s combination of hardware and software, automate appliances within your home</string>

    <string name="slide_2_title">High-Tech Security!</string>
    <string name="slide_2_desc">With state-of-the-art technology, you can monitor activities within your home</string>

    <string name="slide_3_title">Monitor your Consumption!</string>
    <string name="slide_3_desc">View how much your home is consuming if you own a Mojec Meter or purchase our Switch-V2</string>

    <string name="slide_4_title">Cloud Based Solution!</string>
    <string name="slide_4_desc">Our system allows you to automate and monitor your home from anywhere in the world</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="signup_btn">No account yet? Create one</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LOGIN/REGISTER</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account with Mojec yet? Register here!</string>
    <string name="btn_link_to_login">Already registered? Log in here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email ID to sent you password reset instructions.</string>


    <string name="toolbar_profile">Profile</string>
    <string name="posts">SECURITY MODE</string>
    <string name="followers">SWITCHES</string>
    <string name="following">CAMERAS</string>
</resources>
